<resources>

    <plurals name="plural_decimal_test_decimal">
        <item quantity="other">%s</item>
    </plurals>

    <string name="app_description">∠( ᐛ 」∠)_使用指南∠( ᐛ 」∠)_\n\n ○ 狠戳插件开关\n\n  开启开关</string>


    <string name="filter_card">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="app_name">Bailey</string>
    <string name="login_bar_right_txt">注册</string>
    <string name="login_bar_title">登陆</string>
    <string name="login_forget_psw">忘记密码？</string>
    <string name="register_title">注册</string>
    <string name="login_user_hint">账号</string>
    <string name="login_psw_hint">密码</string>
    <string name="ca_user">用户名</string>
    <string name="ca_login_psw">登陆密码</string>
    <string name="ca_again_psw">确认密码</string>
    <string name="ca_phone">手机号码</string>
    <string name="ca_pin">验证码</string>
    <string name="ca_get_pin">获取验证码</string>
    <string name="next">下一步</string>
    <string name="skip">跳过</string>
    <string name="ii_address">所在区域</string>
    <string name="ii_card">身份证</string>
    <string name="ii_sex">性别</string>
    <string name="ii_name">真实姓名</string>
    <string name="pi_cardholder_name">持卡人姓名</string>
    <string name="pi_bank_card">银行卡号</string>
    <string name="pi_bank_name">开户银行</string>
    <string name="pi_bank_branch">开户支行</string>
    <string name="pi_pay_psw">支付密码</string>
    <string name="pi_pay_psw_again">确认支付密码</string>
    <string name="main_top_title">第一支付</string>
    <string name="tab_home_pager">首页</string>
    <string name="tab_wealth">财富</string>
    <string name="tab_me">我的</string>
    <string name="home_page_note_text">注：国家发布最新规定，商户必须实名，请各商户在12月31日前到官网提交实名资料，逾期造成的损失由商户承担，谢谢合作，对您造成的不便敬请谅解！</string>
    <string name="ok">确定</string>
    <string name="bank_card">银行卡</string>
    <string name="no_bank_card">暂无银行卡</string>
    <string name="bind">绑定</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="user_agreement_tips">绑定银行卡即表示已阅读并同意</string>
    <string name="hint_bank_branch">请输入开户分行</string>
    <string name="title_bank_branch">开户分行</string>
    <string name="title_bank_card">银行卡号</string>
    <string name="title_bank_name">开户银行</string>
    <string name="hint_bank_card">输入卡号</string>
    <string name="hint_auto_match_bank_card">输入卡号自动匹配</string>
    <string name="title_account">账户名</string>
    <string name="title_add_bank_note">仅支持绑定实名认证本人的银行卡</string>
    <string name="title_add_bank">添加银行卡</string>
    <string name="title_name">姓名</string>
    <string name="hint_identity_card">请输入证件号码</string>
    <string name="hint_choice_sex">请选择性别</string>
    <string name="hint_location">请选择所在地</string>
    <string name="title_location">所在地</string>
    <string name="title_real_name">实名认证</string>
    <string name="title_select_money">选择金额</string>
    <string name="title_pay_type">支付方式</string>
    <string name="pay_num_20">￥1</string>
    <string name="pay_num_50">￥50</string>
    <string name="pay_num_500">￥500</string>
    <string name="pay_num_2000">￥2000</string>
    <string name="pay_num_5000">￥5000</string>
    <string name="title_personal_details">个人信息</string>
    <string name="title_change_nickname">修改昵称</string>
    <string name="hint_nickname">2-15，支持汉字、英文及数字</string>
    <string name="title_change_login_psw">修改登陆密码</string>
    <string name="title_change_pay_psw">修改支付密码</string>
    <string name="title_update_phone">修改手机号码</string>
    <string name="hint_check_old_phone">请验证原手机号码</string>
    <string name="loading">请稍等...</string>
    <string name="param_not_null">参数不能为空</string>
    <string name="hint_new_phone">新手机号码</string>
    <string name="update_suc">修改成功</string>
    <string name="msg_update_phone">您的手机号码为：%s</string>
    <string name="msg_update_email">您的邮箱地址：%s</string>
    <string name="title_bind_email">绑定邮箱</string>
    <string name="hint_not_value">未设置</string>
    <string name="msg_real_name_auth">认证成功</string>
    <string name="title_select_city">城市选择</string>
    <string name="cancel">取消</string>
    <string name="title_transaction_details">交易详情</string>
    <string name="title_all_record">全部记录</string>
    <string name="del_suc">删除成功</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string-array name="share_type">
        <item>纯文本</item>
        <item>仿锤子便签</item>
    </string-array>


</resources>
