<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <EditText
                    android:id="@id/fgm_pi_et_cardholder_name"
                    style="@style/EtLogin"
                    android:layout_weight="1"
                    android:hint="@string/pi_cardholder_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <com.min.bailey.client.mvp.ui.widget.formatedittext.ContentWithSpaceEditText
                    android:id="@id/fgm_pi_et_bank_card"
                    style="@style/EtLogin"
                    android:layout_weight="1"
                    android:enabled="true"
                    android:hint="@string/pi_bank_card"
                    android:inputType="number"
                    android:lines="1"
                    android:scrollbars="vertical"
                    android:textColor="@color/top_title_color"
                    app:input_type="bank_card_no" />

                <!--<EditText-->
                <!--style="@style/EtLogin"-->
                <!--android:layout_weight="1"-->
                <!--android:inputType="number"-->
                <!--android:hint="@string/pi_bank_card" />-->
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <EditText
                    android:id="@id/fgm_pi_et_bank_name"
                    style="@style/EtLogin"
                    android:layout_weight="1"
                    android:hint="@string/pi_bank_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <EditText
                    android:id="@id/fgm_pi_et_bank_branch"
                    style="@style/EtLogin"
                    android:layout_weight="1"
                    android:hint="@string/pi_bank_branch" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <EditText
                    android:id="@id/fgm_pi_et_pay_psw"
                    style="@style/EtLogin"
                    android:layout_weight="1"
                    android:hint="@string/pi_pay_psw"
                    android:inputType="numberPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <EditText
                    android:id="@id/fgm_pi_et_pay_psw_again"
                    style="@style/EtLogin"
                    android:layout_weight="1"
                    android:hint="@string/pi_pay_psw_again"
                    android:inputType="numberPassword" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <!--<com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton-->
            <!--android:id="@id/fgm_ii_btn_next"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/llt"-->
            <!--android:layout_marginLeft="17dp"-->
            <!--android:layout_marginRight="17dp"-->
            <!--android:layout_marginTop="40dp"-->
            <!--android:clickable="true"-->
            <!--android:padding="10dp"-->
            <!--android:text="@string/next"-->
            <!--android:textColor="@android:color/white"-->
            <!--app:qmui_backgroundColor="@color/login_btn"-->
            <!--app:qmui_borderColor="@color/login_btn"-->
            <!--app:qmui_radius="4dp" />-->

        <com.min.bailey.client.mvp.ui.widget.supertextview.SuperButton
            android:id="@id/fgm_ii_btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/llt"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:textColor="@color/white"
            android:padding="10dp"
            app:sSelectorNormalColor="@color/login_btn"
            app:sSelectorPressedColor="@color/login_btn_press"
            app:sUseSelector="true"
            app:sCornersRadius="4dp"/>

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@id/fgm_ii_btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/fgm_ii_btn_next"
            android:layout_marginBottom="13dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:paddingBottom="4dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="4dp"
            android:text="@string/skip"
            android:textColor="@color/et_default_hint"
            android:textSize="14sp"
            app:qmui_borderColor="@color/skip_border_color"
            app:qmui_radius="6dp" />

    </RelativeLayout>

</ScrollView>
